--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "angular-socket-io": "~0.7.0",
     "d3": "~3.5.6",
     "nvd3": "~1.8.1",
-    "angular-nvd3": "~1.0.2"
+    "angular-nvd3": "~1.0.2",
+    "ng-lodash": "~0.3.0"
   },
   "appPath": "public/web/app/",
   "resolutions": {
