--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "Faker": "0.7.2",
     "body-parser": "1.14.1",
+    "express": "4.13.3",
     "method-override": "2.3.5",
     "mongoose": "4.1.12",
     "morgan": "1.6.1",
@@ -32,11 +33,12 @@
     "grunt-ng-annotate": "^0.10.0",
     "grunt-ng-constant": "^1.1.0",
     "grunt-pageres": "^1.1.0",
-    "grunt-sass": "^0.18.1",
+    "grunt-sass": "1.1.0",
     "grunt-svgmin": "^2.0.1",
     "grunt-uncss": "0.3.8",
     "grunt-usemin": "^3.0.0",
     "grunt-wiredep": "^2.0.0",
+    "gulp-sass": "^2.0.4",
     "load-grunt-tasks": "^3.1.0",
     "time-grunt": "^1.1.0",
     "wiredep": "^2.2.2"
