--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "d3": "~3.5.6",
     "nvd3": "~1.8.1",
     "angular-nvd3": "~1.0.2",
-    "ng-lodash": "~0.3.0"
+    "ng-lodash": "~0.3.0",
+    "angular-rx": "~1.0.4"
   },
   "appPath": "public/web/app/",
   "resolutions": {
